--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
     top:0;
     left:0; 
     color: #fff;
-    text-transform: uppercase;
+    text-transform: lowercase;
 }
 .topelmt{
     text-align: center;
@@ -23,7 +23,7 @@
     transition: 0.3s;
 }
 a{
-    text-decoration: none;
+    text-decoration: underline;
     color: white;
 }
 .topelmt:hover{
